Fixes #11: Long URLs break the notifications

--- a/src/css/mat-snack-bar.scss
+++ b/src/css/mat-snack-bar.scss
@@ -2,6 +2,10 @@
   @extend .color-secondary-text;
 }
 
+.mat-simple-snackbar > span {
+  overflow-wrap: anywhere;
+}
+
 .mat-simple-snackbar-action {
   @extend .color-primary;
 }
